[package]
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2021"
name = "toback"
version = "0.0.2"

[dependencies]
serde = { version = "1", default-features = false }

mlua = { version = "0.9", optional = true, features = ["serialize", "serde"] }
ron = { version = "0.8", optional = true }
serde_gura = { version = "0.1.4", optional = true }
serde_json = { version = "1", features = [
    "alloc",
], default-features = false, optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["std"]

std = ["serde_json?/std", "serde/std"]


full = ["json", "gura", "yaml", "ron", "toml"]
gura = ["serde_gura", "std"]
json = ["serde_json"]
ron = ["dep:ron", "std"]
lua = ["mlua", "std"]
yaml = ["serde_yaml", "std"]
toml = ["dep:toml", "std"]

send = ["mlua?/send"]
